syntax = "proto3";

option csharp_namespace = "DiscountCodeApp";

package discountcode;

service DiscountCodeHandler {
  rpc GenerateCode (GenerateRequest) returns (GenerateReply);
  rpc UseCode (UseCodeRequest) returns (UseCodeReply);
}

message GenerateRequest {
  uint32 count = 1;
  uint32 length = 2;
}

message GenerateReply {
  bool result = 1;
}

message UseCodeRequest {
  string code = 1;
}

message UseCodeReply {
  uint32 result = 1;
}